Java 20 deprecates all the URL constructors.
The recommendation is to use URI instead (better input validation)
Start the refactoring process.