@@ -23,7 +23,8 @@ import java.io.OutputStream;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.PasswordAuthentication;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 
 import org.apache.catalina.util.IOTools;
@@ -179,7 +180,9 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
             Authenticator.setDefault(new TaskAuthenticator(username, password));
 
             // Create a connection for this command
-            conn = (new URL(url + command)).openConnection();
+            URI uri = new URI(url + command);
+            uri.parseServerAuthority();
+            conn = uri.toURL().openConnection();
             HttpURLConnection hconn = (HttpURLConnection) conn;
 
             // Set up standard connection characteristics
@@ -300,11 +303,13 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
      * host is cached and used to provide an appropriate Authorization when the
      * next request is made (that includes a request body).
      */
-    private void preAuthenticate() throws IOException {
+    private void preAuthenticate() throws IOException, URISyntaxException {
         URLConnection conn = null;
 
         // Create a connection for this command
-        conn = (new URL(url)).openConnection();
+        URI uri = new URI(url);
+        uri.parseServerAuthority();
+        conn = uri.toURL().openConnection();
         HttpURLConnection hconn = (HttpURLConnection) conn;
 
         // Set up standard connection characteristics
